apps/media/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: media
  labels:
    app: freshrss
    app.kubernetes.io/name: freshrss
    app.kubernetes.io/instance: freshrss
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
        app.kubernetes.io/name: freshrss
        app.kubernetes.io/instance: freshrss
        app.kubernetes.io/part-of: phoenyxlab
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: freshrss
          image: freshrss/freshrss:1.29.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: freshrss-data
