apps/media/freshrss/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-postgres
  namespace: media
  labels:
    app: freshrss-postgres
    app.kubernetes.io/name: freshrss-postgres
    app.kubernetes.io/instance: freshrss-postgres
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app: freshrss-postgres
  ports:
    - port: 5432
      targetPort: 5432
