apps/media/freshrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: media
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - freshrss.phoenyxlab.xyz
  rules:
    - host: freshrss.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshrss
                port:
                  number: 80
